[gd_scene load_steps=5 format=3 uid="uid://c7a0nx2w38mn3"]

[ext_resource type="Script" path="res://Scenes/Projectiles/arrow.gd" id="1_cdcma"]
[ext_resource type="Texture2D" uid="uid://b8yik5x2lyhv1" path="res://Graphics/Player/Arcane archer/projectile.png" id="1_qaxjm"]
[ext_resource type="Texture2D" uid="uid://q50qijo76kmm" path="res://Graphics/Light/light.png" id="3_45x2p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c1nlb"]
radius = 2.0
height = 4.0

[node name="Arrow" type="Area2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 2
script = ExtResource("1_cdcma")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qaxjm")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 4
visibility_layer = 3
position = Vector2(2.68221e-07, 0)
scale = Vector2(1.5, 0.75)
color = Color(0.909804, 0, 0.905882, 1)
energy = 1.5
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_45x2p")
texture_scale = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_c1nlb")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
